# VsToCMake

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
Include/: Aspose.Cells.h
Include/Aspose.Cells.Systems/: Array1D.h  ArrayHelper.h  BitConverter.h  Boxing.h  Buffer.h  CharHelper.h  Console.h  Convert.h  DateTime.h  DateTimeOffset.h  DateTimeResult.h  DecimalHelper.h  Environment.h  Guid.h  IComparable.h  IndexOutOfRangeException.h  PrimitiveToStringHelper.h  SingleHelper.h  String.h  StringHelperPal.h  System.h  TypeCode.h  reference_counter.h
Include/Aspose.Cells.Systems/Collections/: ArrayList.h  HashCodeHelper.h  Hashtable.h  IDictionary.h
Include/Aspose.Cells.Systems/Drawing/: Brush.h  Brushes.h  Color.h  FontFamily.h  Graphics.h  Image.h  Rectangle.h  RectangleF.h  Region.h  SizeF.h  StringFormat.h
Include/Aspose.Cells.Systems/Globalization/: CultureInfo.h  NumberFormatInfo.h  TextInfo.h
Include/Publish/: AccessCacheOptions.h  AccessCacheType.h  AutoFillType.h  AutoFitMergedCellsType.h  AutoFitWrappedTextType.h  AutoShapeType.h  CellValueFormatStrategy.h  CellsException.h  ChartTextDirectionType.h  ChartType.h  ColorDepth.h  CrossType.h  DataBarAxisPosition.h  DataBarBorderType.h  DataBarFillType.h  DataBarNegativeColorType.h  DataLabelShapeType.h  DataLabelsSeparatorType.h  DataLablesSeparatorType.h  DefaultEditLanguage.h  DynamicFilterType.h  EmfRenderSetting.h  EnumType.h  ErrorType.h  ExceptionType.h  ExternalCellValueType.h  ExternalLinkType.h  Factory.h  FileFormatType.h  FilterOperatorType.h  FontSchemeType.h  GridlineType.h  HtmlCrossType.h  IAboveAverage.h  IAbstractTextLoadOptions.h  IArcShape.h  IArea.h  IAutoFilter.h  IAutoFitterOptions.h  IAxis.h  (+241 more)
lib64/: README.txt
xls/: example.xls
(+90 files in other folders)
